# image-guided-final-project

./: README.md
Needle_Path_planning/: CMakeLists.txt
Needle_Path_planning/Needle_Path_Planning/: Needle_Path_Planning.py
Needle_Path_planning/Needle_Path_Planning/Resources/UI/: Needle_Path_Planning.ui
moveit_needle_sim/: .setup_assistant  package.xml  planned_path.txt
moveit_needle_sim/config/: cr5_robot.srdf  daVinci.srdf  daVinci_backup2.srdf  gazebo_materials backup.urdf  gazebo_materials.urdf  kinematics.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
moveit_needle_sim/launch/: gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml
needle_navigation/: CMakeLists.txt  package.xml
needle_navigation/config/: user_parameters.yaml
needle_navigation/launch/: needle_insertion.launch
needle_navigation/src/: move_pose.py  pose.py  saved_pose_end.txt  saved_pose_orignal.txt
needle_navigation/urdf/: standard_test_Robot.urdf  standard_test_Robot_1.urdf  standard_test_Robot_2.urdf
